tools/tests/ui/fail/l1050.cnf
// Test file for error code: L1050
// Expected error: Missing AUDIO-WAV character in variable declaration -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
